--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 @layer base {
   :root {
-
     --background: 0 0% 100%;
 
     --foreground: 240 10% 3.9%;
@@ -35,7 +34,9 @@
 
     --accent-foreground: 240 5.9% 10%;
 
-    --destructive: 0 84.2% 60.2%;
+    /* --destructive: 0 84.2% 60.2%; */
+
+    --destructive: 120 84.2% 60.2%;
 
     --destructive-foreground: 0 0% 98%;
 
@@ -55,10 +56,9 @@
 
     --chart-5: 27 87% 67%;
 
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
   .dark {
-
     --background: 240 10% 3.9%;
 
     --foreground: 0 0% 98%;
@@ -105,7 +105,7 @@
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
 
@@ -118,4 +118,3 @@
     @apply bg-background text-foreground;
   }
 }
-
